--- a/CrimeManagementSystem/src/com/system/resource/ApplicationResource.properties
+++ b/CrimeManagementSystem/src/com/system/resource/ApplicationResource.properties
@@ -56,7 +56,7 @@ html.request.label.suspectDetails=Suspect Details
 html.mainpage.label.mainpage.title=Welcome
 html.mainpage.menu.add=Add Complaint
 html.mainpage.menu.status=View Complaints
-
+html.mainpage.menu.update=Update Complaints
 
 html.request.error.typeofcrime=Please enter Type Of Crime
 html.request.error.crimedate=Please Enter Crime Date
@@ -78,14 +78,19 @@ html.login.label.registration.error=Unable to Register user
 html.mainpage.menu.logout=Logout
 html.request.page.title=Welcome Page
 
-html.view.label.typeofcrime=Type Of Crime
-html.view.label.crimedate=Crime Date
-html.view.label.description=Description
-html.view.label.suspectDetails=Suspect Details
-html.view.label.notes=Notes
+html.view.page.label.typeofcrime=Type Of Crime
+html.view.page.label.crimedate=Crime Date
+html.view.page.label.description=Description
+html.view.page.label.suspectDetails=Suspect Details
+html.view.page.label.notes=Notes
+html.view.page.label.status=Status
 
 html.request.label.typeofcrime=Type Of Crime
 html.request.label.crimedate=Crime Date
 html.request.label.description=Description
 html.request.label.suspectDetails=Suspect Details
 html.request.label.notes=Notes
+
+html.mainpage.label.updated=Updated Succesfully
+html.mainpage.label.delete=Deleted Complaint
+html.view.page.label.edit=Edit
