--- a/CrimeManagementSystem/src/com/system/resource/ApplicationResource.properties
+++ b/CrimeManagementSystem/src/com/system/resource/ApplicationResource.properties
@@ -94,3 +94,4 @@ html.request.label.notes=Notes
 html.mainpage.label.updated=Updated Succesfully
 html.mainpage.label.delete=Deleted Complaint
 html.view.page.label.edit=Edit
+html.request.label.status=Status
